# SNIaSpectrumNN

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
SNIaSpectrumNN/data/: ReconstructionDataset.py  SpectrumDatasetBase.py  VelocityDataset.py
SNIaSpectrumNN/layers/: GatedResidualNetwork.py  TransformerAutoencoderBlock.py
SNIaSpectrumNN/models/: ReconstructionBase.py  ReconstructionHead.py  SpectrumModel.py  SpectrumModelHead.py  VelocitySiII.py
SNIaSpectrumNN/util/: losses.py
scripts/: pretrain.py
tests/: __init__.py
tests/data/: test_spectrum_dataset_base.py
tests/layers/: __init__.py  test_gated_residual_network.py  test_transformer_autoencoder_block.py
tests/util/: __init__.py  test_losses.py
